@@ -1,3 +1,11 @@
+2013-03-28 Max Baak <mbaak@cern.ch>
+	M       scripts/YieldsTable.py
+	M       scripts/SysTable.py
+	M       src/Utils.cxx
+	M       src/Utils.h
+	* Introduced option -y for YieldsTable.py and SysTable.py to use symmetrized minos errors in tables.
+
+
 2013-03-06 Max Baak <mbaak@cern.ch>
 	M       setup.sh
 	* Now points to root 5.34.05, to solve this bug:
